[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribo"
dynamic = ["version"]
description = "A simple, efficient and content-first static site generator (SSG)."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["markdown", "static-site-generator", "scribo", "jinja", "documentation"]
authors = [
  { name = "Md Sujauddin Sekh"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "iniconfig==2.0.0",
  "Jinja2==3.1.4",
  "Markdown==3.6",
  "MarkupSafe==2.1.5",
  "packaging==24.1",
  "pluggy==1.5.0",
  "Pygments==2.18.0",
  "minify_html==0.15.0"
]

[project.urls]
Documentation = "https://github.com/sujaudd1n/scribo#readme"
Issues = "https://github.com/sujaudd1n/scribo/issues"
Source = "https://github.com/sujaudd1n/scribo"

[project.scripts]
scribo = "scribo.__main__:main"

[tool.hatch.version]
path = "src/scribo/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "Makefile",
  "CONTRIBUTING.md",
  "CODE_OF_CONDUCT.md",
  "docs",
  "examples"
]


[tool.hatch.build.targets.wheel]
packages = ["src/scribo"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/scribo tests}"


[tool.coverage.run]
source_pkgs = ["scribo", "tests"]
branch = true
parallel = true
omit = [
  "src/scribo/__about__.py",
]

[tool.coverage.paths]
scribo = ["src/scribo", "*/scribo/src/scribo"]
tests = ["tests", "*/scribo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.djlint]
preserve_blank_lines=true
